projet_GOCass/tests/bad/testfile-never-returns.go
package main

func foo () int {}

func main () {}
